5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1716_2507.log
== TEST (2019-05-10 19:04:53) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbmes = qit
tA = 0
mes = 0

while tbano > 0 and tbano < 8000:
	
	qtv = int(input("Qtd tambaquis para venda: "))
	
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while tbano > 0 and tbano < 8000:
NameError: name 'tbano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:05:11) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbmes = qit
tA = 0
mes = 0

while tbmes > 0 and tbmes < 8000:
	
	qtv = int(input("Qtd tambaquis para venda: "))
	
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    qtv = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:06:02) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100

qtv = 0

tbmes = qit
tA = 0
mes = 0

while tbmes > 0 and tbmes < 8000:
	
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	qtv = int(input("Qtd tambaquis para venda: "))
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:06:18) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100

qtv = 0

tbmes = qit
tA = 0
mes = 0

while tbmes > 0 and tbmes < 8000:
	
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	qtv = int(input("Qtd tambaquis para venda: "))
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:06:53) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100

qtv = 0

tbmes = qit
tA = 0
mes = 0

while tbmes > 0 and tbmes < 8000:
	qtv = int(input("Qtd tambaquis para venda: "))
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:07:02) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100

qtv = 0

tbmes = qit
tA = 0
mes = 0

while tbmes > 0 and tbmes < 8000:
	qtv = int(input("Qtd tambaquis para venda: "))
	tA	 = tbmes + (tbmes*pct)
	tbmes = tA - (qtv)
		
	mes += 1	
	
	
	
if tbmes >= 8000:
	print("MAXIMO")
elif tbmes <= 0:
	print("ZERO")
	
print(mes)
-- EXECUTION TIME:
0.249123
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
